--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/HiLittleCat/react-backbone#readme",
   "dependencies": {
     "gulp": "^3.9.0",
-    "gulp-connect": "^2.2.0"
+    "gulp-concat": "^2.6.0",
+    "gulp-connect": "^2.2.0",
+    "browser-sync": "^2.8.1"
   }
 }
